# DAT250-social-security

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  forms.py  models.py  routes.py
app/templates/: base.html.j2  comments.html.j2  index.html.j2  profile.html.j2  stream.html.j2
